Warriors can target and attack. Made AIHealth a component.

--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -61,21 +61,22 @@
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\Tile.cs" />
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\TimedAnimations.cs" />
      <Compile Include="Assets\HyperLuminal\2D Fantasy Forest Tileset\Scripts\Trigger.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\EnemyController.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\GuardAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\PeasantAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\WarriorAI.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AIHealth.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Bullet.cs" />
      <Compile Include="Assets\Raiders\_Scripts\CameraFollow.cs" />
-     <Compile Include="Assets\Raiders\_Scripts\EnemyController.cs" />
      <Compile Include="Assets\Raiders\_Scripts\GameController.cs" />
      <Compile Include="Assets\Raiders\_Scripts\HealthBar.cs" />
      <Compile Include="Assets\Raiders\_Scripts\IHealth.cs" />
-     <Compile Include="Assets\Raiders\_Scripts\InputControls.cs" />
      <Compile Include="Assets\Raiders\_Scripts\IPickup.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ItemPickup.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ObjectPool.cs" />
-     <Compile Include="Assets\Raiders\_Scripts\PlayerHealth.cs" />
-     <Compile Include="Assets\Raiders\_Scripts\PlayerWeapon.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\Player\InputControls.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\Player\PlayerHealth.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\Player\PlayerWeapon.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ScoreUI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\SoundManager.cs" />
      <Compile Include="Assets\Raiders\_Scripts\SwordController.cs" />
