Warriors now try to make sure they're facing the enemy. Villagers flee directlty away. Need to to generalize some stuff between Warrior and Villager AI

--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -73,6 +73,7 @@
      <Compile Include="Assets\Raiders\_Scripts\IHealth.cs" />
      <Compile Include="Assets\Raiders\_Scripts\IPickup.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ItemPickup.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\LeftRight.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ObjectPool.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Player\InputControls.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Player\PlayerHealth.cs" />
