--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Raiders\_Scripts\AIHealth.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Bullet.cs" />
      <Compile Include="Assets\Raiders\_Scripts\CameraFollow.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\DistanceTrigger.cs" />
      <Compile Include="Assets\Raiders\_Scripts\GameController.cs" />
      <Compile Include="Assets\Raiders\_Scripts\HealthBar.cs" />
      <Compile Include="Assets\Raiders\_Scripts\IHealth.cs" />
@@ -77,6 +78,7 @@
      <Compile Include="Assets\Raiders\_Scripts\UnityEventManager.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Weapon.cs" />
      <Compile Include="Assets\Raiders\_Scripts\WeaponUI.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\ZOrderer.cs" />
      <Compile Include="Assets\Tilemap\Brushes\Tint Brush Smooth\Scripts\TintTextureGenerator.cs" />
      <Compile Include="Assets\Tilemap\GridInformation\Scripts\GridInformation.cs" />
      <Compile Include="Assets\Tilemap\Tiles\Animated Tile\Scripts\AnimatedTile.cs" />
