Finally figured out how to make TargetNearest a generic function. Also broke it into FindTargets and TargetNearest. Created an NPC base class.

--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Raiders\_Scripts\AI\EnemyController.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\GuardAI.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\NpcBase.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\PeasantAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\WarriorAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AIHealth.cs" />
