Moved a couple of lines around in UnitController.Death and State machine.

--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Raiders\_Scripts\AI\State_Idle.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\WarriorAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AIHealth.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\BreadthFirst.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Bullet.cs" />
      <Compile Include="Assets\Raiders\_Scripts\CameraFollow.cs" />
      <Compile Include="Assets\Raiders\_Scripts\CapturePoint.cs" />
