--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -55,6 +55,11 @@
      <Compile Include="Assets\Raiders\_Scripts\AI\GuardAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\IBehaviourState.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\NpcBase.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Graph.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Heap.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Node.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Pathfinding.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Unit.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\PeasantAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\State_Chase.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\State_Flee.cs" />
@@ -72,7 +77,6 @@
      <Compile Include="Assets\Raiders\_Scripts\IHealth.cs" />
      <Compile Include="Assets\Raiders\_Scripts\IPickup.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ItemPickup.cs" />
-     <Compile Include="Assets\Raiders\_Scripts\LeftRight.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ObjectPool.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Player\InputControls.cs" />
      <Compile Include="Assets\Raiders\_Scripts\Player\PlayerHealth.cs" />
@@ -88,14 +92,6 @@
      <Compile Include="Assets\Raiders\_Scripts\Weapon.cs" />
      <Compile Include="Assets\Raiders\_Scripts\WeaponUI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\ZOrderer.cs" />
-     <Compile Include="Assets\Tilemap\Brushes\Tint Brush Smooth\Scripts\TintTextureGenerator.cs" />
-     <Compile Include="Assets\Tilemap\GridInformation\Scripts\GridInformation.cs" />
-     <Compile Include="Assets\Tilemap\Tiles\Animated Tile\Scripts\AnimatedTile.cs" />
-     <Compile Include="Assets\Tilemap\Tiles\Pipeline Tile\Scripts\PipelineTile.cs" />
-     <Compile Include="Assets\Tilemap\Tiles\Random Tile\Scripts\RandomTile.cs" />
-     <Compile Include="Assets\Tilemap\Tiles\Rule Tile\Scripts\RuleTile.cs" />
-     <Compile Include="Assets\Tilemap\Tiles\Terrain Tile\Scripts\TerrainTile.cs" />
-     <None Include="Assets\Tilemap\Brushes\Tint Brush Smooth\Shaders\TintedTilemap.shader" />
      <None Include="Assets\Raiders\Assets\Free Audio\Metal Loop Pack\readme Unity.txt" />
      <None Include="Assets\Raiders\Assets\Free Audio\Door SFX Pack\Readme.txt" />
      <None Include="Assets\Raiders\Assets\Free Audio\Rock Loops Pack\Unity Readme.txt" />
