Alright, I've rotated eveything to be on an XZ axis so that I can just use the Built-in Navmesh. I still plan on using the A* stuff from SebLague, but I just want the prototype to move forward at this point.

--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -59,7 +59,7 @@
      <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Heap.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Node.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Pathfinding.cs" />
-     <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\Unit.cs" />
+     <Compile Include="Assets\Raiders\_Scripts\AI\Pathfinding\PathingUnit.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\PeasantAI.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\State_Chase.cs" />
      <Compile Include="Assets\Raiders\_Scripts\AI\State_Flee.cs" />
