--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Assets\Raiders\_Scripts\AI\State_Idle.cs" />
     <Compile Include="Assets\Raiders\_Scripts\AI\WarriorAI.cs" />
     <Compile Include="Assets\Raiders\_Scripts\AIHealth.cs" />
+    <Compile Include="Assets\Raiders\_Scripts\Building.cs" />
     <Compile Include="Assets\Raiders\_Scripts\Bullet.cs" />
     <Compile Include="Assets\Raiders\_Scripts\CameraFollow.cs" />
     <Compile Include="Assets\Raiders\_Scripts\CapturePoint.cs" />
