Added some UI script to go to a level Player is collidin with buildings (I don't know if this was already fixed earlier or not) Villagers can enter and exit buildings

--- a/Raiding party/Assembly-CSharp.csproj
+++ b/Raiding party/Assembly-CSharp.csproj
@@ -82,9 +82,12 @@
     <Compile Include="Assets\Raiders\_Scripts\DistanceTrigger.cs" />
     <Compile Include="Assets\Raiders\_Scripts\GameController.cs" />
     <Compile Include="Assets\Raiders\_Scripts\HealthBar.cs" />
+    <Compile Include="Assets\Raiders\_Scripts\IFlamable.cs" />
     <Compile Include="Assets\Raiders\_Scripts\IHealth.cs" />
     <Compile Include="Assets\Raiders\_Scripts\IPickup.cs" />
+    <Compile Include="Assets\Raiders\_Scripts\ISafety.cs" />
     <Compile Include="Assets\Raiders\_Scripts\ItemPickup.cs" />
+    <Compile Include="Assets\Raiders\_Scripts\LevelSelect.cs" />
     <Compile Include="Assets\Raiders\_Scripts\ObjectPool.cs" />
     <Compile Include="Assets\Raiders\_Scripts\Player\InputControls.cs" />
     <Compile Include="Assets\Raiders\_Scripts\Player\PlayerHealth.cs" />
