--- a/Raiding Revisited/Assembly-CSharp.csproj
+++ b/Raiding Revisited/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\GameController.cs" />
+    <Compile Include="Assets\Scripts\Calendar.cs" />
     <Compile Include="Assets\Scripts\UI\TileInspector.cs" />
     <Compile Include="Assets\ParadoxNotion\PolyNav2D\DEMO\Scripts\ChangeSpeedOnDepth.cs" />
     <Compile Include="Assets\Scripts\Village\Buildings\BuildingData.cs" />
@@ -104,7 +105,7 @@
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\ParadoxNotion\PolyNav2D\README.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
-    <None Include="Assets\UI Toolkit\InfoPanel.uxml" />
+    <None Include="Assets\UI Toolkit\topPanel.uxml" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
